- Throw InvalidScheduleException when a new or updated event overlaps an existing one at the same location and date - Restrict booking creation so users with the PERFORMER role cannot book events - Handle HttpMessageNotReadableException locally in AuthController signup endpoint for malformed request bodies